--- a/src/components/HabitList/habitList.module.css
+++ b/src/components/HabitList/habitList.module.css
@@ -1,5 +1,31 @@
+.habitMain{
+    /* border: 1px solid violet; */
+    padding: 20px;
+    color: white;
+}
+
+.habitList{
+    border: 1px solid rgb(189, 184, 184);
+    background: linear-gradient(84deg, #48474a, #212556fa);
+    padding: 15px;
+    border-radius: 5px;
+
+}
+
 .listFlex{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
+
+.btnMain{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    
+}
+
